# application/config/routes.php
@@ -132,6 +132,8 @@ $route['api/v1/settings/(:any)']['put'] = 'api/v1/settings_api_v1/update/$1';
 
 $route['api/v1/availabilities']['get'] = 'api/v1/availabilities_api_v1/get';
 
+$route['api/v1/availabilities/dates']['get'] = 'api/v1/availabilities_api_v1/dates';
+
 /*
 | -------------------------------------------------------------------------
 | CUSTOM ROUTING
